k8s/consitent-hash/nginx-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-hash-destination-rule
  namespace: demo-istio-hash
spec:
  host: nginx-hash-service.demo-istio-hash.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user"
  subsets:
    - name: all
      labels:
        app: nginx-hash
